# gnome-extension-connman

./: .gitignore  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  connmanAgent.js  connmanApplet.js  connmanInterface.js  extension.js  metadata.json
po/: LINGUAS  POTFILES.in  ca.po  es.po  fi.po  messages.pot
src/: Makefile  Makefile.am  agent.js  applet.js  connectionItem.js  connmanAgent.js  connmanApplet.js  connmanInterface.js  extension.js  interface.js  logger.js  metadata.json.in  service.js  stylesheet.css  technology.js  version.js
